# CortexStream

./: BUILD.md  CMakeLists.txt  CONFIGURATION.md  HUGGINGFACE_INTEGRATION.md  KV_CACHE_DOCUMENTATION_INDEX.md  KV_CACHE_EXECUTIVE_SUMMARY.md  KV_CACHE_IMPLEMENTATION.md  LICENSE  README.md  SAMPLER_QUICK_REF.md
cmake/: Dependencies.cmake
docs/: ARCHITECTURE_INTEGRATION.md  DELIVERABLES.md  HUGGINGFACE_GUIDE.md  IMPLEMENTATION.md  IMPLEMENTATION_ROADMAP.md  KV_CACHE_API_REFERENCE.md  KV_CACHE_DESIGN.md  KV_CACHE_DOCUMENTATION_INDEX.md  KV_CACHE_INTEGRATION.md  REQUEST_RESPONSE_CONTRACT.md  REQUEST_RESPONSE_QUICK_REF.md  SAMPLER.md  SUMMARY.md  TRITON_COMPARISON.md  api_reference.md  architecture.md  benchmarks.md  design_decisions.md
examples/: CMakeLists.txt  benchmark.cpp  huggingface_inference.cpp  multi_request_server.cpp  simple_inference.cpp
include/cortexstream/: engine.h  kv_cache.h  model.h  request.h  response.h  sampler.h  scheduler.h  tokenizer.h  utils.h
scripts/: build.sh  generate_docs.sh  run_bench.sh
src/: CMakeLists.txt
src/cache/: allocator.cpp  kv_cache.cpp
src/engine/: engine.cpp  inference_engine.cpp  scheduler.cpp
src/model/: model_backend.cpp  sampling.cpp  tokenizer.cpp
src/request/: request.cpp  response.cpp
src/response/: response.cpp
src/utils/: metrics.cpp
tests/: CMakeLists.txt  test_engine.cpp  test_kvcache.cpp  test_scheduler.cpp
